Updated Fido parser to work with Fido 1.1.9 that allows passing in a filename as a command line parameter. This allows a Pronom ID to be returned for files that aren't recognised by file contents but are recognised by filename.